minor fix to listening log

--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -19,6 +19,10 @@
 			margin: 0px;
 		}
 
+		h4 {
+			text-align: left;
+		}
+
 	</style>
 </head>
 
@@ -27,27 +31,29 @@
 		<h2>listening logs</h2>
 		<p>thoughts n highlights of stuff i listen to! i try my best to be as detailed as possible in these. <small>that's why there aren't many bc they take a while to write... head empty.</small> these are usually first listens unless stated otherwise. <small>also i have a life now so expect less logs in here :( you'll see more activity @ my <a href="https://rateyourmusic.com/~doqmeat" target="_blank" class="outlink">RYM page</a></small></p>
 		<h3>pages</h3>
-		<a href="2024/summer.html" target="_parent">summer 2024</a>
-		<a href="2024/spring.html" target="_parent">spring 2024</a>
-		<a href="2024/winter.html" target="_parent">winter 2024</a>
-		<a href="2023/12.html" target="_parent">december 2023</a>
-		<a href="2023/11.html" target="_parent">november 2023</a>
-		<a href="2023/10.html" target="_parent">october 2023</a>
-		<a href="2023/09.html" target="_parent">september 2023</a>
-		<a href="2023/08.html" target="_parent">august 2023</a>
-		<a href="2023/07.html" target="_parent">july 2023</a>
-		<a href="2023/06.html" target="_parent">june 2023</a>
-		<a href="2023/05.html" target="_parent">may 2023</a>
-		<a href="2023/04.html" target="_parent">april 2023</a>
+		<h4>2024</h4>
+		<a href="2024/summer.html" target="_parent">summer</a>
+		<a href="2024/spring.html" target="_parent">spring</a>
+		<a href="2024/winter.html" target="_parent">winter</a>
+		<h4>2023</h4>
+		<a href="2023/12.html" target="_parent">december</a>
+		<a href="2023/11.html" target="_parent">november</a>
+		<a href="2023/10.html" target="_parent">october</a>
+		<a href="2023/09.html" target="_parent">september</a>
+		<a href="2023/08.html" target="_parent">august</a>
+		<a href="2023/07.html" target="_parent">july</a>
+		<a href="2023/06.html" target="_parent">june</a>
+		<a href="2023/05.html" target="_parent">may</a>
+		<a href="2023/04.html" target="_parent">april</a>
 
-		<h4>all listening logs</h4>
+		<h3>all listening logs</h3>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D <small>(updated every time i create a new page!)</small></summary>
-			<p><a href="2024/sprint.html#5" target="parent">dall</a> - ARTMS</p>
-			<p><a href="2024/sprint.html#4" target="parent">3rd desire [reve]</a> - kim woo seok</p>
-			<p><a href="2024/sprint.html#3" target="parent">陽​の​か​け​ら</a> - inuha</p>
-			<p><a href="2024/sprint.html#2" target="parent">beautiful MAZE</a> - DRIPPIN</p>
-			<p><a href="2024/sprint.html#1" target="parent">non-breath oblige</a> - pinocchioP</p>
+			<p><a href="2024/spring.html#5" target="parent">dall</a> - ARTMS</p>
+			<p><a href="2024/spring.html#4" target="parent">3rd desire [reve]</a> - kim woo seok</p>
+			<p><a href="2024/spring.html#3" target="parent">陽​の​か​け​ら</a> - inuha</p>
+			<p><a href="2024/spring.html#2" target="parent">beautiful MAZE</a> - DRIPPIN</p>
+			<p><a href="2024/spring.html#1" target="parent">non-breath oblige</a> - pinocchioP</p>
 			<p><a href="2024/winter.html#5" target="parent">the time machine school</a> - kinoue64</p>
 			<p><a href="2024/winter.html#4" target="parent">p.h.</a> - seventhlinks</p>
 			<p><a href="2024/winter.html#3" target="parent">worm in the apple</a> - youra</p>
