new journal log + updated button wall

--- a/doqmeat/journal/logs.html
+++ b/doqmeat/journal/logs.html
@@ -26,6 +26,7 @@
 		<h1 class="hide">all journal logs</h1>
 		<article>
 			<ul>
+				<li>31.jul.24 - <a href="2024/07.html#31">employment era</a></li>
 				<li>15.jul.24 - <a href="2024/07.html#15">interview update</a></li>
 				<li>06.jul.24 - <a href="2024/07.html#6">journal v3 + interview</a></li>
 				<li>25.jun.24 - <a href="2024/06.html#25">last day</a></li>
