--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -167,6 +167,7 @@
 			<a title="petrapixel" href="https://petrapixel.neocities.org" target="_blank"><img src="!g/petrapixel.gif" alt="petrapixel"></a>
 			<a href="https://deadmall.xyz" target="_blank"><img src="!g/deadmall.gif" alt="deadmall"></a>
 			<a href="https://waywardlamb.neocities.org/" target="_blank"><img src="!g/waywardlamb.png" alt="waywardlamb"></a>
+			<a href="https://forks.neocities.org/"><img src="https://forks.neocities.org/88x31/forks.png" alt="forks"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
