reworked JS for random mv ad

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -76,8 +76,8 @@
 		</div>
 
 		<!-- others-->
-		<div id="ad">
-			<noscript>this box is for "music ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript>
+		<div id="mv">
+			<noscript>this box is for music video "ads" but do not fear! it's just screenshots of my favorite music videos :)</noscript>
 		</div>
 
 		<div id="log" class="box">
@@ -133,11 +133,10 @@
 		</div>
 
 		<footer>
-			last updated on 24.feb.24
+			last updated on 02.aug.24
 			<br>
 
-			<b>credit:</b> <a href="https://forums.htmlhelp.com/index.php?showtopic=18694" target="_blank">random img JS code</a> used for the "ads" <span class="emoji1"></span>
-
+			<b>credit:</b>
 			bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a> <span class="emoji1"></span>
 
 			<a href="https://codepen.io/sadness97/pen/RwKbNWW" target="_blank">webamp player code</a>
@@ -150,10 +149,10 @@
 		<a title="go back home!" href="/"><img src="/!g/pix/music-note-sozaiya.gif" alt="homepage link"></a>
 	</div>
 
-	<!--	javascripts -->
+	<!--	scripts -->
 	<script src="https://unpkg.com/webamp"></script>
 	<script src="webamp.js"></script>
-	<script src="music-ads.js"></script>
+	<script src="random-mv.js"></script>
 </body>
 
 </html>
