fallout new vegas log

--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -34,8 +34,23 @@
 		<div class="info"><b>developer: </b> obsidian entertainment</div>
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
-		<div class="info"><b>crash / glitch count:</b> 18</div>
+		<div class="info"><b>crash / glitch count:</b> 20</div>
 		<h3>logs</h3>
+		<hr>
+		<p><span class="date">04.aug.24</span> very close to the ending of the main quest (i think!) but i still have a few quests i wanna do... + i wanna explore as much as i can :3 i also would like to get the DLCs before finishing the main storyline but i wanna get em on sale... we'll see about that later on. here are some screenshots:</p>
+		<figure>
+			<img src="240804%20(1).jpg" width="100%" alt="screenshot from fallout new vegas">
+			<figcaption>doggy :3 rex beloved with his new brain</figcaption>
+		</figure>
+		<figure>
+			<img src="240804%20(2).jpg" width="100%" alt="screenshot from fallout new vegas">
+			<figcaption>my storage area in goodsprings. i have decorated it with a gnome and a dino</figcaption>
+		</figure>
+		<figure>
+			<img src="240804%20(3).jpg" width="100%" alt="screenshot from fallout new vegas">
+			<figcaption>my snowgloves so far!!!</figcaption>
+		</figure>
+		<hr>
 		<p><span class="date">29.jul.24</span> obsessed with these boxing gloves. and also my fit.</p>
 		<img src="boxing.jpg" alt="my courier next to arcade gannon with some sick boxing gloves." width="100%">
 		<hr>
