--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -36,6 +36,10 @@
 		</article>
 -->
 			<article>
+				<p><b>04.aug.24 - 10pm</b> i kinda wanna redo my homepage so i've been working on that, but i'm not sure what exactly to do with it!! i know i would like to make it a bit lighter for those with slow connections (like me) and i wanna move my fanlistings and webrings into a separate page too. i might go for something a bit more minimalist? not sure but i would also like to mess around with colors and have different themes for it. we will see!</p>
+			</article>
+
+			<article>
 				<p><b>31.jul.24 - 3pm</b> did a bit of javascript stuff today! learned how to use <code>localStorage</code> and implemented it on my <a href="/blog">blog</a> for the light / dark theme switcher. took me a bit bc the result would end up being <code>null</code> if it was your first time visiting that page so i just simply did a <i>if null do "light theme"</i> and it worked so that's going to be like that until i can learn to do it another way. i also figured i could rewrite the random music ad script on my <a href="/music">music</a> page in a more coherent and efficent way than the one shown from the template i took. <button onclick="showPic('!g/240731-js.jpg','screenshot of code editor','like look at this mess')">!g/240731-js.jpg</button></p>
 			</article>
 			<article>
