vocaloid webring had something funky in the JS, made my own file

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -21,8 +21,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css">
 	<link class="theme" href="/!f/homepage-v3/flower.css" rel="stylesheet" type="text/css">
 	<!--	JS for webrings-->
-	<script src="https://eggring.neocities.org/js/hatring.js"></script>
-	<script src="https://eggring.neocities.org/js/eggring-config.js"></script>
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<!--	tooltip shit-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
@@ -344,7 +342,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<!--  vocaloid webring -->
 			<div id="vocaring">
-				<script src="https://webring.adilene.net/webring.js"></script>
+				<script src="!f/voca.js"></script>
 			</div>
 
 			<!-- mob psycho 100 / mp100 webring -->
