--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -119,6 +119,7 @@
 			<img src="!g/meow.jpg">
 			<img src="!g/birchforestconceptart.png">
 			<img src="!g/mobfighton.gif" alt="mob fight on!">
+			<img src="!g/i-still-buy-cds.png" alt="i still buy CDs">
 			<img src="!g/seal.gif" alt="silly seal">
 			<img src="!g/nightowl.gif">
 			<img src="!g/cat2.gif"><a href="https://www.deviantart.com/tradt-production/art/GH-Warrior-Pandora-416079617" target="_blank">
