--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -18,8 +18,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
 	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css">
 	<link href="!f/v4/body.css" rel="stylesheet" type="text/css">
-	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css">
-	<link class="theme" href="!f/v4/garden.css" rel="stylesheet" type="text/css">
+	<link class="theme" href="!f/v4/sunset.css" rel="stylesheet" type="text/css">
 	<!--	extra -->
 	<link rel="stylesheet" href="https://sugarforbrains.neocities.org/mobring/onionring.css">
 	<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
