--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -119,13 +119,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="current" class="box">
 			<h2>currently...</h2>
 			<p>
-				<span class="hl">playing:</span> <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a>
+				<span class="hl">playing:</span> <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a> + <a href="vgs/style-savvy-trendsetters/index.html">style savvy trendsetters</a>
 			</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> joe pera talks with you, twin peaks: the return</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> not much atm!</p>
-			<p class="date">last updated on 30.jul.24</p>
+			<p><span class="hl">working on:</span> getting ready for classes to start</p>
+			<p class="date">last updated on 09.aug.24</p>
 
 		</div>
 
@@ -150,7 +150,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<img src="!g/web/doqmeat-2.png" alt="button 2">
 			</center>
 			<p>if you want to explore more personal sites beyond doqmeat.com, check out my <a href="/sites">button wall</a> with tons of buttons from my neighbors and just overall sites that i enjoy visiting.</p>
-			<p>take care and come visit again someday :3</p>
+			<p>take care and come visit again someday (^・ω・^ )</p>
 		</div>
 
 		<div id="chat" class="box">
