--- a/doqmeat/notebook/links/credit.html
+++ b/doqmeat/notebook/links/credit.html
@@ -44,7 +44,7 @@
 
 		<p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
 
-		<h2>homepage v4 credits</h2>
+		<h2 id="home">homepage v4 credits</h2>
 		<li><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> by <a href="https://adilene.net/" target="_blank">adilene</a></li>
 
 		<h3>garden theme</h3>
