--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,10 @@
 			<p><b></b> </p>
 		</article>
 -->
+			<article id="240809">
+				<p><b>09.aug.24 - 11pm</b> the start of my 2nd semester @ uni is getting near! i will be taking 2 classes: <i>introduction to computer science</i> and <i>precalculus 2</i>. i am overall pretty excited, especially bc i'll be taking my first compsci class! of course, i'm also a bit nervous... but i know i'll be okay. i miss using the train.</p>
+			</article>
+
 			<article>
 				<p><b>04.aug.24 - 10pm</b> i kinda wanna redo my homepage so i've been working on that, but i'm not sure what exactly to do with it!! i know i would like to make it a bit lighter for those with slow connections (like me) and i wanna move my fanlistings and webrings into a separate page too. i might go for something a bit more minimalist? not sure but i would also like to mess around with colors and have different themes for it. we will see!</p>
 			</article>
