--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -143,7 +143,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="outro" class="box">
 			<h2>bye bye</h2>
 			<p>i hope you have fun browsing my website :3</p>
-			<p>you can leave a message about your visit (or about anything really! i usually reply) on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an e-mail if you'd like! go crazy.</p>
+			<p>you can leave a message about your visit (or about anything really! i usually reply) on my <a href="/guestbook">guestbook</a>, the chatbox, or even send me an <a href="mailto:doqmeat@gmail.com">e-mail</a> if you'd like! go crazy.</p>
 			<p>want to link back to me? here are some of my buttons! i would prefer if you didn't <a href="https://awesomelytechie.com/dont-hotlink/" target="_blank">hotlink</a> please! save to your own server.</p>
 			<center>
 				<img src="!g/web/doqmeat.png" alt="button">
@@ -356,7 +356,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<footer id="foot" class="box">
 			<p><a href="/notebook/links/credit.html#home">credit</a> for materials used / homepage running on v4</p>
-			<p>coded with love by <b>des</b> / on the web since <b>11.apr.24</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a></p>
+			<p>coded with love by <b>des</b> / on the web since <b>11.apr.24</b> / hosted on <a href="https://neocities.org" target="_blank">neocities</a> / <a href="mailto:doqmeat@gmail.com">contact me</a></p>
 			<a href="https://decolonizepalestine.com/" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
 			<img src="/collection/internet-graphics/!g/nop.gif">
