style savvy trendsetters log

--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>style savvy: trendsetters</title>
+	<title>style savvy trendsetters</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -35,13 +35,36 @@
 <body>
 
 	<main>
-		<h2>style savvy: trendsetters</h2>
+		<h2>style savvy trendsetters</h2>
 		<div class="info"><b>status: </b> currently</div>
 		<div class="info"><b>release date: </b> september 27, 2012</div>
 		<div class="info"><b>developer: </b> syn sophia</div>
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
 
 		<h3>logs</h3>
+		<p><span class="date">13.aug.24</span> been coming back to this game for a bit after being fixated on <a href="../fallout-new-vegas/index.html">new vegas</a> for a little bit... forgot just how much fun this game is. been taking my 3DS to work and playing during my lunch hour.</p>
+		<center>
+			<img src="240813%20(9).jpg" alt="" width="80%">
+			<img src="240813%20(8).jpg" alt="" width="49%">
+			<img src="240813%20(10).jpg" alt="" width="49%">
+			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
+			<img src="240813%20(2).bmp" alt="" width="80%">
+			<img src="240813%20(1).bmp" alt="" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
+			<img src="240813%20(4).bmp" alt="" width="80%">
+			<img src="240813%20(3).bmp" alt="" width="80%">
+			<img src="240813%20(7).jpg" alt="" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
+			<img src="240813%20(1).jpg" alt="" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
+			<img src="240813%20(2).jpg" alt="" width="49%">
+			<img src="240813%20(3).jpg" alt="" width="49%">
+			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
+			<img src="240813%20(4).jpg" alt="" width="49%">
+			<img src="240813%20(5).jpg" alt="" width="49%">
+			<img src="240813%20(6).jpg" alt="" width="80%">
+		</center>
+		<hr>
 		<p><span class="date">03.jul.24</span> 🏳️‍🌈 ? <br> <img src="240703-gay.jpg" width="100%"></p>
 		<hr>
 		<p><span class="date">05.jun.24</span> i hacked my 3DS a couple of days ago and since then, my life has changed. i go a little bit into detail about this on a <a href="/journal/2024/06.html#4" target="_parent">journal log</a> but i've been meaning to play the older style savvy games ever since i started playing <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> and oh boy!</p>
