--- a/doqmeat/vgs/style-savvy-trendsetters/index.html
+++ b/doqmeat/vgs/style-savvy-trendsetters/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8">screenshot from style savvy trendsetter
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>style savvy trendsetters</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
@@ -44,25 +44,25 @@
 		<h3>logs</h3>
 		<p><span class="date">13.aug.24</span> been coming back to this game for a bit after being fixated on <a href="../fallout-new-vegas/index.html">new vegas</a> for a little bit... forgot just how much fun this game is. been taking my 3DS to work and playing during my lunch hour.</p>
 		<center>
-			<img src="240813%20(9).jpg" alt="" width="80%">
-			<img src="240813%20(8).jpg" alt="" width="49%">
-			<img src="240813%20(10).jpg" alt="" width="49%">
-			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
-			<img src="240813%20(2).bmp" alt="" width="80%">
-			<img src="240813%20(1).bmp" alt="" width="80%">
-			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
-			<img src="240813%20(4).bmp" alt="" width="80%">
-			<img src="240813%20(3).bmp" alt="" width="80%">
-			<img src="240813%20(7).jpg" alt="" width="80%">
-			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
-			<img src="240813%20(1).jpg" alt="" width="80%">
-			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
-			<img src="240813%20(2).jpg" alt="" width="49%">
-			<img src="240813%20(3).jpg" alt="" width="49%">
-			<br><img src="/!g/div/clothes.gif" alt="" style="max-width: 100%"><br>
-			<img src="240813%20(4).jpg" alt="" width="49%">
-			<img src="240813%20(5).jpg" alt="" width="49%">
-			<img src="240813%20(6).jpg" alt="" width="80%">
+			<img src="240813%20(9).jpg" alt="screenshot from style savvy trendsetter" width="80%">
+			<img src="240813%20(8).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<img src="240813%20(10).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<br><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%"><br>
+			<img src="240813%20(2).bmp" alt="screenshot from style savvy trendsetter" width="80%">
+			<img src="240813%20(1).bmp" alt="screenshot from style savvy trendsetter" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%"><br>
+			<img src="240813%20(4).bmp" alt="screenshot from style savvy trendsetter" width="80%">
+			<img src="240813%20(3).bmp" alt="screenshot from style savvy trendsetter" width="80%">
+			<img src="240813%20(7).jpg" alt="screenshot from style savvy trendsetter" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%"><br>
+			<img src="240813%20(1).jpg" alt="screenshot from style savvy trendsetter" width="80%">
+			<br><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%"><br>
+			<img src="240813%20(2).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<img src="240813%20(3).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<br><img src="/!g/div/clothes.gif" alt="screenshot from style savvy trendsetter" style="max-width: 100%"><br>
+			<img src="240813%20(4).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<img src="240813%20(5).jpg" alt="screenshot from style savvy trendsetter" width="49%">
+			<img src="240813%20(6).jpg" alt="screenshot from style savvy trendsetter" width="80%">
 		</center>
 		<hr>
 		<p><span class="date">03.jul.24</span> 🏳️‍🌈 ? <br> <img src="240703-gay.jpg" width="100%"></p>
