--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -51,6 +51,7 @@ v3 of journal started on 05.jul.24
 				<a href="logs.html" target="log">all logs</a>
 				<details>
 					<summary>2024</summary>
+					<a href="2024/08.html" target="log">august</a>
 					<a href="2024/07.html" target="log">july</a>
 					<a href="2024/06.html" target="log">june</a>
 					<a href="2024/05.html" target="log">may</a>
@@ -84,7 +85,7 @@ v3 of journal started on 05.jul.24
 			</div>
 		</aside>
 
-		<iframe id="mainframe" name="log" src="2024/07.html"></iframe>
+		<iframe id="mainframe" name="log" src="2024/08.html"></iframe>
 
 		<footer>
 			<p><img src="/!g/pix/butterfly5.gif"> journal running on version 3 since 06.jul.24 <img src="/!g/pix/butterfly5.gif"></p>
