--- a/doqmeat/notebook/F2U/codes.html
+++ b/doqmeat/notebook/F2U/codes.html
@@ -11,19 +11,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -40,6 +28,11 @@
 
 		<li>you are allowed to edit and use code from these templates for your own things to your hearts content</li>
 		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> anywhere is very appreciated.</li>
+
+		<h2 id="yukika"><a title="click for preview and code!" href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">yukika passport</a></h2>
+		<img src="preview/yukika1.jpg" width="100%" alt="screenshots of yukika theme">
+		<img src="preview/yukika2.jpg" width="100%" alt="screenshots of yukika theme">
+		<p>a fun exercise on CSS animations and to see how close i could get to doing all of this with my current knowledge of JS. inspired by yukika's soul lady album and the passport inclusion! i talk more about it in the preview :3</p>
 
 		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
 		<center><img src="preview/notebook.jpg" width="100%"><br><img src="preview/notebook2.jpg" width="100%"></center>
