--- a/doqmeat/journal/logs.html
+++ b/doqmeat/journal/logs.html
@@ -26,6 +26,7 @@
 		<h1 class="hide">all journal logs</h1>
 		<article>
 			<ul>
+				<li>22.aug.24 - <a href="2024/08.html#13">storm update + compsci class</a></li>
 				<li>13.aug.24 - <a href="2024/08.html#13">tropical storm</a></li>
 				<li>31.jul.24 - <a href="2024/07.html#31">employment era</a></li>
 				<li>15.jul.24 - <a href="2024/07.html#15">interview update</a></li>
