updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -162,14 +162,19 @@
 			<a href="https://sabrin.party" target="_blank"><img src="!g/sabrin.gif" alt="sabrin"></a>
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/versipellis.png"></a>
 			<a title="chocolate-cake" href="https://chocolate-cake.neocities.org" target="_blank"><img src="!g/chocolate-cake.gif" alt="chocolate-cake"></a>
-			<a title="chronodove - this site gives me off such an interesting vibe! love their writings" href="https://chronodove.neocities.org/" target="_blank"><img src="https://i.imgur.com/MwpPvJy.png" alt="chronodoves button"></a>
+			<a title="chronodove - this site gives me off such an interesting vibe! love their writings" href="https://chronodove.neocities.org/" target="_blank"><img src="!g/chronodove.png" alt="chronodoves"></a>
 			<a title="circat" href="https://circat.neocities.org" target="_blank"><img src="!g/circat.png" alt="circat"></a>
 			<a title="petrapixel" href="https://petrapixel.neocities.org" target="_blank"><img src="!g/petrapixel.gif" alt="petrapixel"></a>
 			<a href="https://deadmall.xyz" target="_blank"><img src="!g/deadmall.gif" alt="deadmall"></a>
 			<a href="https://waywardlamb.neocities.org/" target="_blank"><img src="!g/waywardlamb.png" alt="waywardlamb"></a>
-			<a href="https://forks.neocities.org/"><img src="https://forks.neocities.org/88x31/forks.png" alt="forks"></a>
-		</div>
+			<a href="https://forks.neocities.org/" target="_blank"><img src="!g/forks.png" alt="forks"></a>
+			<a href="https://pysgodyn3.neocities.org/" target="_blank"><img src="!g/pysgodyn.png" alt="pysgodyn3"></a>
+			<a href="https://melody-nomas.neocities.org/" target="_blank"><img src="!g/melody.gif" alt="melody"></a>
+			<a href="https://soulbox.neocities.org" target="_blank"><img alt="soulbox" src="!g/soulbox.png">
+			</a>
+			<a href="https://hazure03.neocities.org" target="_blank"><img src="!g/hazure03.gif" alt="hazure03"></a>
 
+		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
