added webneko and a nyan cat to homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -29,6 +29,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 </head>
 
 <body>
+	<script>
+		NekoType = "black"
+
+	</script>
+	<h1 id=nl>
+		<script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
+	</h1>
 
 	<div id="wrapper">
 		<header id="header">
@@ -119,13 +126,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<div id="current" class="box">
 			<h2>currently...</h2>
 			<p>
-				<span class="hl">playing:</span> <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a> + <a href="vgs/style-savvy-trendsetters/index.html">style savvy trendsetters</a>
+				<span class="hl">playing:</span> <a href="vgs/style-savvy-trendsetters/index.html">style savvy trendsetters</a> + <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a>
 			</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> joe pera talks with you, twin peaks: the return</p>
+			<p><span class="hl">watching:</span> joe pera talks with you</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> getting ready for classes to start</p>
-			<p class="date">last updated on 09.aug.24</p>
+			<p><span class="hl">working on:</span> my uni life + part time job :p</p>
+			<p class="date">last updated on 24.aug.24</p>
 
 		</div>
 
@@ -367,6 +374,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</footer>
 		<!--		wrapper end div-->
 	</div>
+
+	<center><img title="doqmeat.com protected by nyan cat" src="!g/pix/nyancat.gif" alt="nyan cat"></center>
 
 
 	<script src="!f/v4/music-player.js"></script>
