--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -32,12 +32,13 @@
 
 		<h1>internet graphics</h1>
 		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much... all of these are just stuff i like.</p>
-		<p>click for credit, i'll try my best to link them back to their sources! please feel free to contact me if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
+		<p>click for credit, i'll try my best to link them back to their sources! please feel free to <a title="e-mail" href="mailto:doqmeat@gmail.com" target="_blank">contact me</a> if you know the source of any of these. some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
 		<h2 id="1" class="title">stamps</h2>
 		<div id="stamps" class="container">
 
 			<a href="https://www.deviantart.com/aetheriaa/art/Shooting-Star-Stamp-593476133" target="_blank"><img src="!g/shootingstars.gif"></a>
+			<img src="!g/internetiscoolbc.png" alt="internet is cool because">
 			<a href="https://emeowly.gay/" target="_blank"><img src="!g/catwithflowers.png"></a>
 			<a href="https://www.deviantart.com/moonxviii/art/Mob-Blooms-645165434" target="_blank"><img src="!g/mobflower.png"></a>
 			<img src="!g/typos.gif">
@@ -114,6 +115,7 @@
 			<img src="!g/stevenalex.png">
 			<a href="https://lu.tiny-universes.net/" target="_blank"><img src="!g/lu.tiny-makeyourown.png"></a>
 			<img src="!g/sillayyyyy.png">
+			<img src="!g/oldelectronics.png" alt="old electronics">
 			<img src="!g/mario10.gif">
 			<img src="!g/beelieve.png">
 			<img src="!g/meow.jpg">
@@ -284,7 +286,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>09.jul.24</b></p>
+		<p>last updated on: <b>24.aug.24</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
