--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,6 +35,11 @@
 			<p><b></b> </p>
 		</article>
 -->
+
+			<article id="240825">
+				<p><b>25.aug.24 - 9pm</b> i've noticed my chatbox and overall site followers has had some sort of influx lately and i was like woah i wonder where all of these ppl are coming from, and then when i click on the <i>websites</i> tab on neocities i am the very 3rd site in there <small>(well used to be cus it updated)</small> <img src="/!g/pix/catsob.gif"> but either way that makes a lot of sense.</p>
+			</article>
+
 			<article id="240809">
 				<p><b>09.aug.24 - 11pm</b> the start of my 2nd semester @ uni is getting near! i will be taking 2 classes: <i>introduction to computer science</i> and <i>precalculus 2</i>. i am overall pretty excited, especially bc i'll be taking my first compsci class! of course, i'm also a bit nervous... but i know i'll be okay. i miss using the train.</p>
 			</article>
