new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -35,7 +35,10 @@
 			<p><b></b> </p>
 		</article>
 -->
-
+			<article id="240829">
+				<p><b>29.aug.24 - 12am</b> been learning a bit more and more about python as i go to my compsci class. very basic stuff though. learned how to use my terminal to do python too. not really sure how ppl would prefer (or how it is more convenient?) to code something on a terminal instead of an editor but idk! prof also showed us an online <a href="https://www.programiz.com/python-programming/online-compiler/" target="_blank" class="outlink">compiler</a> we can use, though i think i will stick to my buddy brackets as an editor and use my git bash to display the output.</p>
+				<p>which btw, talking about my terminal... i was wondering if there was a way to customize a bit more in-depth how terminals look and it finds out that there actually <i>is</i> a way of doing it! i downloaded <a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> and it works wonderfully on my git bash. i will admit it took me a good second to understand how to set it up but i think it was relatively easy. <button onclick="showPic('!g/240829-bash.jpg','screenshot of my git bash','theres a ton of cool themes but this neko one caught my attention because of the layout. i loved the thought of a little cat speaking to me. another cool thing is that you can also customize these themes however you want. so i added a little GUP! in there because lately i have been pretty obsessed with saying that out loud. in reference of that swimming cat of course.')">!g/240829-bash.jpg</button></p>
+			</article>
 			<article id="240825">
 				<p><b>25.aug.24 - 9pm</b> i've noticed my chatbox and overall site followers has had some sort of influx lately and i was like woah i wonder where all of these ppl are coming from, and then when i click on the <i>websites</i> tab on neocities i am the very 3rd site in there <small>(well used to be cus it updated)</small> <img src="/!g/pix/catsob.gif"> but either way that makes a lot of sense.</p>
 			</article>
