added a bash command, changed some things around

--- a/doqmeat/projects/bash/index.html
+++ b/doqmeat/projects/bash/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>i'm learning JS</title>
+	<title>bash ref sheet</title>
 	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
 	<link href="../body.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<h1>cmd reference sheet</h1>
+	<h1>bash reference sheet</h1>
 	<main>
 		<p>but mainly the ones i know off / taken note of. take in mind that i use git bash on windows so some stuff might be different for you. i'm new to all this so i've explained some things from how i understand them. feel free to e-mail me if i got something wrong <img src="/!g/pix/catsob.gif" alt="cat crying"></p>
 		<h2>overall</h2>
@@ -37,6 +37,7 @@
 			<li><code>cp [filename1] [newfile]</code> - copies a files. you can also achieve the same with <code>cat &lt;[filename1]&gt; [newfile]</code></li>
 			<li><code>find -name '*[search]*'</code> - searches for files with that word.</li>
 			<li><code>sudo</code> - run things as a superuser</li>
+			<li><code>notepad [filename]</code> - opens file on notepad</li>
 
 
 		</ul>
@@ -59,6 +60,7 @@
 			<li><code>git pull</code> - pulls code for any changes.</li>
 			<li><code>git diff --stat --cached [remote/branch]</code> - shows you commits that are about to be pushed. remote/branch is usually <code>origin/main</code> for me.</li>
 			<li><code>git show</code> - show changes made</li>
+			<li><code>git log</code> - previous commits</li>
 
 		</ul>
 	</main>
@@ -66,7 +68,7 @@
 	<footer>
 		....... ᓚᘏᗢ .......
 		<br>
-		<b>last updated on: 14.jul.24</b>
+		<b>last updated on: 29.aug.24</b>
 		<br>
 		<a href="/projects">projects</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
