--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
-	<title>web projects</title>
+	<title>projects</title>
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
 	<link href="body.css" rel="stylesheet">
 	<link href="index.css" rel="stylesheet">
@@ -19,9 +19,9 @@
 		<img src="!g/power.png" width="100%" alt="power from chainsaw man">
 	</aside>
 	<main>
-		<h1>web projects</h1>
+		<h1>projects</h1>
 		<main>
-			<p>(　o=^•ェ•)o　┏━┓ here's some of my stuff that is one the interwebs</p>
+			<p>(　o=^•ェ•)o　┏━┓ here's some stuff that i am working on outside my site</p>
 			<ul>
 				<li><a href="/">doqmeat.com</a> - my personal website and playground. you are on it right now!</li>
 				<li><a href="https://siinamota.doqmeat.com/" target="_blank">siinamota.doqmeat.com</a> - a fansite for composer and vocaloid producer <i>siinamota</i>!</li>
@@ -40,7 +40,8 @@
 			<p>i will also have in here some pages relating to things i'm learning or for reference.</p>
 			<ul>
 				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS.</li>
-				<li><a href="cmd/index.html">cmd reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet.</li>
+				<li><s>learning python</s> - soon maybe.</li>
+				<li><a href="bash/index.html">bash reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet.</li>
 			</ul>
 		</main>
 		<footer>
