--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -1,188 +1,198 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>sitemap</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all" />
-		<link href="/notebook/sitely/site.css" rel="stylesheet" type="text/css" media="all" />
-		<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all" />
-		<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif" />
-		<!-- tooltip shit -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-		<script src="/!f/tooltip-jquary.js"></script>
-		<script src="/!f/tooltip.js"></script>
-		<!--  end of tooltip shit -->
-		<style>
-			#wrapper {
-				max-width: 400px;
-			}
 
-			a:visited {
-				color: darkgray;
-			}
-		</style>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<title>sitemap</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/notebook/sitely/site.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/notebook/body.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif" />
+	<!-- tooltip shit -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
+	<!--  end of tooltip shit -->
+	<style>
+		#wrapper {
+			max-width: 400px;
+		}
 
-	<body>
-		<div id="wrapper">
-			<center>
-				<h1>sitemap</h1>
-			</center>
-			<li><a href="/" target="_parent">homepage</a></li>
-			<li><a href="rss.xml" target="_parent">RSS feed</a></li>
+		a:visited {
+			color: darkgray;
+		}
+
+	</style>
+</head>
+
+<body>
+	<div id="wrapper">
+		<center>
+			<h1>sitemap</h1>
+		</center>
+		<li><a href="/" target="_parent">homepage</a></li>
+		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
+		<ul>
+			<li><a href="/about.html" target="_parent">about</a></li>
+			<li><b>writings</b></li>
 			<ul>
-				<li><a href="/about.html" target="_parent">about</a></li>
-				<li><b>writings</b></li>
+				↳
+				<a href="/journal/index.html" target="_parent">journal</a>
+				<br />
+				↳
+				<a href="/microblog/index.html" target="_parent">microblog</a>
+				<br />
+				↳
+				<a href="/blog/index.html" target="_parent">blog</a>
+			</ul>
+			<li><a href="/music/index.html" target="_parent">music</a></li>
+			<ul>
+				↳
+				<a href="/music/fav-albums.html" target="_parent">albums</a>
+				<br />
+				↳
+				<a href="/music/artists-genres.html" target="_parent">artists &amp; genres</a>
+				<br />
+				↳
+				<a href="/music/kpop-producers.html" target="_parent">k-pop producers</a>
+				<br />
+				↳
+				<a href="/music/featured.html" target="_parent">featured music</a>
+				<br />
+				↳
+				<a href="/music/cds.html" target="_parent">cd collection</a>
+				<br />
+				↳
+				<a href="/music/playlists.html" target="_parent">playlists</a>
+				<br />
+				↳
+				<a href="/music/listening-log/index.html" target="_parent">listening logs</a>
+				<br />
+				↳
+				<a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
+				<br />
+				↳
+				<a href="/music/strobe-light.html" target="_parent">strobe light secret page</a>
+			</ul>
+			<li><a href="/shrines" target="_parent">shrines</a></li>
+			<ul>
+				↳
+				<a href="/shrines/mizu" target="_parent">mizu</a>
+			</ul>
+			<li><a href="/collection" target="_parent">collections</a></li>
+			<ul>
+				↳
+				<a href="/collection/internet-stamps" target="_parent">internet graphics</a>
+				<br />
+				↳
+				<a href="/collection/mail-stamps" target="_parent">mail stamps</a>
+				<br />
+				↳
+				<a href="/collection/stickers" target="_parent">stickers</a>
+				<br />
+				↳
+				<a href="/collection/cats" target="_parent">cat pics</a>
+				<br />
+				↳
+				<a href="/collection/plushies/index.html" target="_parent">plushies</a>
+			</ul>
+			<li><b>media logs</b></li>
+			<ul>
+				↳
+				<a href="/vgs" target="_parent">video games</a>
+				<br />
+				↳
+				<a href="/tv" target="_parent">TV</a>
+				<br />
+				↳
+				<a href="/books" target="_parent">books</a>
+				<img src="/!g/pix/caution1.gif" />
+				<br />
+				↳
+				<a href="/music/listening-log" target="_parent">music</a>
+			</ul>
+			<li><a href="/art" target="_parent">art</a></li>
+			<li><a href="/photobook" target="_parent">photobook</a></li>
+			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
+			<li><a href="/projects">projects</a></li>
+			<ul>
+				↳
+				<a href="/projects/bash" target="_parent">bash reference sheet</a>
+				<br />
+				↳
+				<a href="/projects/learning-js" target="_parent">learning JS</a>
+			</ul>
+			<li><a href="/guestbook/index.html" target="_parent">guestbook</a></li>
+			<ul>
+				<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
+			</ul>
+			<li><a href="/notebook" target="_parent">notebook</a></li>
+			<ul>
+				<li><b>links</b></li>
 				<ul>
 					↳
-					<a href="/journal/index.html" target="_parent">journal</a>
+					<a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
+					<br />↳
+					<a href="/notebook/links/credit.html" target="_parent">credit &amp; inspiration</a>
 					<br />
 					↳
-					<a href="/microblog/index.html" target="_parent">microblog</a>
-					<br />
-					↳
-					<a href="/blog/index.html" target="_parent">blog</a>
+					<a href="/notebook/links/fonts.html" target="_parent">fonts</a>
 				</ul>
-				<li><a href="/music/index.html" target="_parent">music</a></li>
+				<li><b>sitely</b></li>
 				<ul>
 					↳
-					<a href="/music/fav-albums.html" target="_parent">albums</a>
+					<a href="/notebook/graphics.html" target="_parent">sitemap</a>
+					(you're here!)
 					<br />
 					↳
-					<a href="/music/artists-genres.html" target="_parent">artists &amp; genres</a>
+					<a href="/notebook/info.html" target="_parent">tools info</a>
 					<br />
 					↳
-					<a href="/music/kpop-producers.html" target="_parent">k-pop producers</a>
-					<br />
-					↳
-					<a href="/music/featured.html" target="_parent">featured music</a>
-					<br />
-					↳
-					<a href="/music/cds.html" target="_parent">cd collection</a>
-					<br />
-					↳
-					<a href="/music/playlists.html" target="_parent">playlists</a>
-					<br />
-					↳
-					<a href="/music/listening-log/index.html" target="_parent">listening logs</a>
-					<br />
-					↳
-					<a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
-					<br />
-					↳
-					<a href="/music/strobe-light.html" target="_parent">strobe light secret page</a>
+					<a href="/notebook/graphics.html" target="_parent">graphics</a>
 				</ul>
-				<li><a href="/shrines" target="_parent">shrines</a></li>
+				<li><b>F2U</b></li>
 				<ul>
 					↳
-					<a href="/shrines/mizu" target="_parent">mizu</a>
+					<a href="/notebook/F2U/stamps.html" target="_parent">stamps</a>
+					<br />
+					↳
+					<a href="/notebook/F2U/materials.html" target="_parent">materials</a>
+					<br />
+					↳
+					<a href="/notebook/F2U/codes.html" target="_parent">templates</a>
 				</ul>
-				<li><a href="/collection" target="_parent">collections</a></li>
+				<li><b>tutorials / guides</b></li>
 				<ul>
 					↳
-					<a href="/collection/internet-stamps" target="_parent">internet graphics</a>
-					<br />
-					↳
-					<a href="/collection/mail-stamps" target="_parent">mail stamps</a>
-					<br />
-					↳
-					<a href="/collection/stickers" target="_parent">stickers</a>
-					<br />
-					↳
-					<a href="/collection/cats" target="_parent">cat pics</a>
-					<br />
-					↳
-					<a href="/collection/plushies/index.html" target="_parent">plushies</a>
+					<a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a>
+					<img src="/!g/pix/new1.gif" alt="new page" />
 				</ul>
-				<li><b>media logs</b></li>
+				<li><b>archives</b></li>
 				<ul>
 					↳
-					<a href="/vgs" target="_parent">video games</a>
+					<a href="/notebook/archive/updates.html" target="_parent">updates</a>
 					<br />
 					↳
-					<a href="/tv" target="_parent">TV</a>
+					<a href="/notebook/archive/homepage/index.html" target="_parent">homepage layouts</a>
 					<br />
 					↳
-					<a href="/books" target="_parent">books</a>
-					<img src="/!g/pix/caution1.gif" />
+					<a href="/notebook/archive/layouts/index.html" target="_parent">page layouts</a>
 					<br />
 					↳
-					<a href="/music/listening-log" target="_parent">music</a>
-				</ul>
-				<li><a href="/art" target="_parent">art</a></li>
-				<li><a href="/photobook" target="_parent">photobook</a></li>
-				<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
-				<li><a href="/projects">web projects</a></li>
-				<li><a href="/guestbook/index.html" target="_parent">guestbook</a></li>
-				<ul>
-					<li><a href="/guestbook/archive.html">archived 123guestbook</a></li>
-				</ul>
-				<li><a href="/notebook" target="_parent">notebook</a></li>
-				<ul>
-					<li><b>links</b></li>
-					<ul>
-						↳
-						<a href="/notebook/links/index.html" target="_parent">links &amp; resources</a>
-						<br />↳
-						<a href="/notebook/links/credit.html" target="_parent">credit &amp; inspiration</a>
-						<br />
-						↳
-						<a href="/notebook/links/fonts.html" target="_parent">fonts</a>
-					</ul>
-					<li><b>sitely</b></li>
-					<ul>
-						↳
-						<a href="/notebook/graphics.html" target="_parent">sitemap</a>
-						(you're here!)
-						<br />
-						↳
-						<a href="/notebook/info.html" target="_parent">tools info</a>
-						<br />
-						↳
-						<a href="/notebook/graphics.html" target="_parent">graphics</a>
-					</ul>
-					<li><b>F2U</b></li>
-					<ul>
-						↳
-						<a href="/notebook/F2U/stamps.html" target="_parent">stamps</a>
-						<br />
-						↳
-						<a href="/notebook/F2U/materials.html" target="_parent">materials</a>
-						<br />
-						↳
-						<a href="/notebook/F2U/codes.html" target="_parent">templates</a>
-					</ul>
-					<li><b>tutorials / guides</b></li>
-					<ul>
-						↳
-						<a href="/notebook/tutorials/rss/index.html" target="_parent">RSS feed</a>
-						<img src="/!g/pix/new1.gif" alt="new page" />
-					</ul>
-					<li><b>archives</b></li>
-					<ul>
-						↳
-						<a href="/notebook/archive/updates.html" target="_parent">updates</a>
-						<br />
-						↳
-						<a href="/notebook/archive/homepage/index.html" target="_parent">homepage layouts</a>
-						<br />
-						↳
-						<a href="/notebook/archive/layouts/index.html" target="_parent">page layouts</a>
-						<br />
-						↳
-						<a href="/notebook/archive/pages/index.html" target="_parent">archived pages</a>
-					</ul>
-				</ul>
-				<li><b>misc pages</b></li>
-				<ul>
-					<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
-					<li><a href="/sites/index.html" target="_parent">button wall</a></li>
-					<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
-					<li><a href="/masaaki-yuasa/index.html" target="_parent">masaaki yuasa watchlist</a></li>
-					<li><a href="/october-movies/index.html">october movies</a></li>
+					<a href="/notebook/archive/pages/index.html" target="_parent">archived pages</a>
 				</ul>
 			</ul>
-		</div>
-	</body>
+			<li><b>misc pages</b></li>
+			<ul>
+				<li><a href="/safe-spot/index.html" target="_parent">safe spot</a></li>
+				<li><a href="/sites/index.html" target="_parent">button wall</a></li>
+				<li><a href="/webgarden/greenhouse.html" target="_parent">webgarden greenhouse</a></li>
+				<li><a href="/masaaki-yuasa/index.html" target="_parent">masaaki yuasa watchlist</a></li>
+				<li><a href="/october-movies/index.html">october movies</a></li>
+			</ul>
+		</ul>
+	</div>
+</body>
+
 </html>
