--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -60,7 +60,7 @@
 			<a title="jj - very lovely! i love reading about their projects! so charming" href="https://cygnet.neocities.org" target="_blank"><img src="!g/cygnet.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="erin - cute pastel site, has a ton of cute resources, and another inspiration for my site!" target="_blank"><img src="!g/strawberry-gashes.gif"></a>
 			<a title="philia - nice site :)" href="https://philia995.neocities.org" target="_blank"><img src="!g/philia995.gif"></a>
-			<a title="tsukinio charming site and a inspiration for mine! lovely layout. also i love the button" href="https://komichi.neocities.org" target="_blank"><img src="!g/komichi.png"></a>
+			<a href="https://tsukinio.dorothea.us" target="_blank"><img src="!g/tsukinio.gif" alt="tsukinio"></a>
 			<a title="fae - FAE!!! fae's website is so fucking cool to me i love this site a whole ton!!!! i love the intricate designs that all of their pages have. im just in awe every time i give em a visit! album shelf + dreams pages are some of my favs. oh did i mention that their art is really cool too? YUP!" href="https://faegardens333.neocities.org" target="_blank"><img src="!g/faegardens333.gif"></a>
 			<a title="princess - very cool site! always has a neat layout" href="https://princss.online" target="_blank"><img src="https://princss.online/media/images/buttons/princss_button.png"></a>
 			<a title="avery - soft and cozy blog" href="https://isopodz.neocities.org" target="_blank"><img src="https://isopodz.neocities.org/buttons/littleguybutton.jpg" alt="isopodz"></a>
@@ -185,6 +185,7 @@
 			<a href="https://yaebee.neocities.org/" target="_blank">yaebee</a> /
 			<a href="https://cyclopamine.neocities.org/" target="_blank">cyclopamine</a> /
 			<a href="https://maphren.neocities.org/" target="_blank">maphren</a> / <a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a> / <a href="https://karameruu.neocities.org/" target="_blank">karameruu</a>
+			<a href="https://vianamana.neocities.org/" target="_blank">vianamana</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
