minor changes to about
fixes typo, added some minor info

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -44,13 +44,14 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 year olds from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish despite my site being mostly in eng. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science.</p>
+					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish though my site is mostly in english. an online habit i guess *shrugs* pero como quiera se pueden comunicar conmigo en cualquier de los dos idiomas. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science in university! which was kickstarted in 2023 by my interest in coding as i learned more and more about maintaining a personal website.</p>
+
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i find it extremely difficult to write about who i am. i'm not sure why. i would say i know myself pretty well. but when comes to things like this, i am pretty horrible at it. hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> but at the end of the day i just like being silly and having fun.</p>
 
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">despite being a bit introverted, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading! and i hope you enjoy your stay.</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">despite being a bit introverted, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
 
 				<h3>doqmeat.com origin story</h3>
 
@@ -58,11 +59,11 @@
 
 				<p><img src="/!g/deco/puter.gif" align="left" style="margin-right:15px;">so i took it upon myself to learn html and css. it was pretty tricky the first few months. and i still have much to learn. but i am confident enough in my coding skills where i can imagine how i want a page and build it from scratch. which is certainly a new hobby i've picked up from making my own site! i have fallen in love with the process of making new pages and decorating them to my liking. i find it very entertaining and fun to do, which is why all of my pages are unique on their own!</p>
 
-				<p>i like keeping track of things and talking about what i love (or hate). these are pretty much the foundations that my site is built upon.</p>
+				<p>i like keeping track of things and talking about what i love. these are pretty much the foundations that my site is built upon.</p>
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p style="text-align: right"><b>last updated on: 02.jun.24</b></p>
+				<p style="text-align: right"><b>last updated on: 29.aug.24</b></p>
 			</div>
 		</div>
 	</div>
